# rewards

./: .gitignore  .prettierignore  Cargo.toml  README.md  SECURITY.md  TEST_COVERAGE.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  txtx.yml
.github/: cliff.toml
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
program/: Cargo.toml  NEW_REWARD_CLASS_CHECKLIST.md  build.rs
program/src/: entrypoint.rs  errors.rs  lib.rs
program/src/events/: balance_synced.rs  claim_closed.rs  claimed.rs  distribution_closed.rs  distribution_created.rs  mod.rs  opt_in.rs  opt_out.rs  recipient_added.rs  recipient_revoked.rs  reward_distributed.rs  shared.rs  vesting_distribution_created.rs  vesting_recipient_added.rs
program/src/instructions/: definition.rs  impl_instructions.rs  mod.rs
program/src/instructions/add_direct_recipient/: accounts.rs  data.rs  instruction.rs  mod.rs  processor.rs
program/src/instructions/add_vesting_recipient/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/claim_direct/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/claim_merkle/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/claim_vesting/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/close_direct_distribution/: accounts.rs  instruction.rs  processor.rs
program/src/instructions/close_direct_recipient/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/close_merkle_claim/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/close_merkle_distribution/: accounts.rs  instruction.rs  processor.rs
program/src/instructions/close_vesting_distribution/: accounts.rs  data.rs  instruction.rs  processor.rs
program/src/instructions/continuous/: README.md  mod.rs
program/src/state/: direct_distribution.rs  direct_recipient.rs  merkle_claim.rs  merkle_distribution.rs  merkle_revocation.rs  mod.rs  revocation.rs  reward_pool.rs  user_reward_account.rs  vesting_distribution.rs  vesting_recipient.rs
program/src/traits/: account.rs  claim.rs  distribution.rs  event.rs  instruction.rs  mod.rs  pda.rs  vesting.rs
program/src/utils/: account_utils.rs  balance_source.rs  claim_utils.rs  continuous_utils.rs  event_utils.rs  macros.rs  merkle_utils.rs  mod.rs  pda_utils.rs  program_utils.rs  revoke_utils.rs  time_utils.rs  token2022_utils.rs  token_utils.rs  vesting_utils.rs
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs  test_add_direct_recipient.rs  test_add_vesting_recipient.rs  test_claim_continuous.rs  test_claim_direct.rs  test_claim_merkle.rs  test_claim_vesting.rs  test_cliff_vesting.rs  test_close_direct_distribution.rs  test_close_direct_recipient.rs  test_close_merkle_claim.rs  test_close_merkle_distribution.rs  test_close_reward_pool.rs  test_close_vesting_distribution.rs  test_continuous_lifecycle.rs  test_create_direct_distribution.rs  test_create_merkle_distribution.rs  test_create_vesting_distribution.rs  test_distribute_reward.rs  test_opt_in.rs  test_opt_out.rs  test_revoke_direct_recipient.rs  test_revoke_merkle_claim.rs  test_revoke_user.rs  test_set_balance.rs  test_sync_balance.rs
(+153 files in other folders)
