[workspace]
resolver = "2"
members = ["program", "clients/rust", "tests/integration-tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[workspace.dependencies]
codama = "^0.7.2"
serde_json = "^1.0.145"
const-crypto = "^0.3.0"
pinocchio = { version = "^0.10.1", features = ["copy"] }
pinocchio-associated-token-account = "^0.3.0"
pinocchio-log = "^0.5.1"
pinocchio-system = "^0.5.0"
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "^0.2.0"
spl-token-2022 = { version = "^10.0.0", features = ["no-entrypoint"] }
thiserror = "^2.0.17"
solana-address = { version = "2.0", features = ["curve25519"] }
solana-security-txt = "^1.1.2"
borsh = "^1.6.0"
num-derive = "^0.4.0"
num-traits = "^0.2.0"
