[package]
name = "rewards-program-client"
version = "0.0.1"
edition = "2021"
description = "Rust client for the Rewards Program"
license = "MIT"
repository = "https://github.com/solana-program/rewards"

[dependencies]
borsh = { workspace = true }
solana-account-info = "3.1.0"
solana-pubkey = "4.0.0"
solana-address = "2.0.0"
solana-instruction = "3.1.0"
solana-cpi = "3.0.1"
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-client = { version = "3.1.5", optional = true }
solana-account = { version = "~3.2", optional = true }
solana-program-error = "3.0.0"
thiserror = { workspace = true }

[features]
default = []
fetch = ["solana-client", "solana-account"]

[package.metadata.cargo-machete]
ignored = ["num-traits"]
