[package]
name = "tests-rewards-program"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
litesvm = "^0.9.0"
rewards-program-client = { path = "../../clients/rust", features = [
    "fetch",
], default-features = false }
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-account = "~3.2"
spl-token-interface = "2.0.0"
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
solana-system-interface = "3.0.0"
solana-address = "2.0.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
